syntax = "proto3";

package StorageServer;

option go_package = "dstore/example/StorageServer";

service FileService {
  rpc RegisterUserRead(RegUserReadArgs) returns (RegUserReadReply);
  rpc UploadFileInit(UploadInitArgs) returns (UploadInitReply);
  rpc UploadFileFinish(UploadFinishArgs) returns (UploadFinishReply);
}

message RegUserReadArgs {
  string    UserToken = 1;
  repeated string    FileToken = 2;
  repeated string    FileKey   = 3;
}

message RegUserReadReply {
  string    FileSize  = 1;
  bool      OK        = 2;
  string    Message   = 3;
}

message UploadInitArgs {
  string    UserToken = 1;
  repeated string    FileKey   = 2;
  repeated int64     FileSize  = 3;
  repeated string    FileToken = 4;
}

message UploadInitReply {
  bool      OK        = 1;
  string    Message   = 2;
}

message UploadFinishArgs {
  string    OldFileKey  = 1;
  string    UserToken   = 2;
  string    FileToken   = 3;
  string    NewFileKey  = 4;
  string    FileSHA512  = 5;
}

message UploadFinishReply {
  bool      OK        = 1;
  string    Message   = 2;
}
